--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,25 @@
-default: &default
-  adapter: sqlite3
+development: 
+  adapter: postgresql
+  encoding: unicode
+  database: linecards
   pool: 5
-  timeout: 5000
+  username: teufel
+  password: '@WERRDAL4@'
 
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: linecards_test
+  pool: 5
+  username: teufel
+  password: '@WERRDAL4@'
 
-production:
-  <<: *default
-  database: db/production.sqlite3
+production: 
+  adapter: postgresql
+  encoding: unicode
+  database: linecards_test
+  pool: 5
+  username: teufel
+  password: '@WERRDAL4@'
+
+  prepared_statements: false
